Sync order status data and redesign tracking stepper

--- a/nerin_final_updated/frontend/seguimiento.html
+++ b/nerin_final_updated/frontend/seguimiento.html
@@ -38,7 +38,9 @@
 
       <div id="orderSummary" class="order-card" style="display:none"></div>
 
-      <ul id="tracker" class="progress-tracker" style="display:none"></ul>
+      <div id="orderAlert" class="order-alert" role="alert" style="display:none"></div>
+
+      <div id="orderProgress" class="order-progress-container" style="display:none"></div>
 
       <div class="contact-section">
         <p>Si tenés alguna duda, escribinos con tu número de pedido.</p>
