Implement order tracking and invoice management

--- a/nerin_final_updated/frontend/seguimiento.html
+++ b/nerin_final_updated/frontend/seguimiento.html
@@ -54,7 +54,7 @@
       </div>
     </main>
 
-    <script type="module" src="/js/seguimiento.js"></script>
+    <script type="module" src="/js/seguimiento.js?v=20241002-nerin-01"></script>
     <script type="module" src="/js/config.js"></script>
   </body>
 </html>
