--- a/nerin_final_updated/frontend/seguimiento.html
+++ b/nerin_final_updated/frontend/seguimiento.html
@@ -2,7 +2,10 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, viewport-fit=cover, shrink-to-fit=no"
+    />
     <title>Seguimiento de tu pedido – NERIN</title>
           <link rel="stylesheet" href="style.css?v=mobfix-1" />
     <link rel="stylesheet" href="/components/np-footer.css?v=np-r1">
