--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -37,6 +37,20 @@
         padding: 1.5rem;
       }
 
+      #admin-build-banner {
+        display: inline-flex;
+        align-items: center;
+        gap: 0.5rem;
+        background: var(--accent-soft);
+        color: var(--accent);
+        padding: 0.6rem 1rem;
+        border-radius: 999px;
+        font-weight: 600;
+        letter-spacing: 0.02em;
+        margin-bottom: 1.25rem;
+        box-shadow: inset 0 0 0 1px rgba(37, 99, 235, 0.12);
+      }
+
       h1 {
         margin-top: 0;
         font-size: 1.75rem;
@@ -336,6 +350,7 @@
     </style>
   </head>
   <body>
+    <div id="admin-build-banner">Build: dev • Multi-images: ON</div>
     <h1>Administración de pedidos</h1>
     <p class="status-text" id="ordersFetchStatus"></p>
     <div class="admin-layout">
@@ -479,6 +494,13 @@
           console.warn('No se pudo obtener la versión del backend', error);
         }
         window.__ADMIN_BUILD__ = buildId;
+        window.__NERIN_ADMIN_BUILD__ = buildId;
+        const banner = document.getElementById('admin-build-banner');
+        if (banner) {
+          banner.textContent = `Build: ${
+            window.__NERIN_ADMIN_BUILD__ || 'dev'
+          } • Multi-images: ON`;
+        }
         const script = document.createElement('script');
         script.src = `js/admin.js?v=${encodeURIComponent(buildId)}`;
         script.dataset.build = buildId;
