--- a/nerin_final_updated/frontend/admin.html
+++ b/nerin_final_updated/frontend/admin.html
@@ -13,6 +13,18 @@
     />
       <link rel="stylesheet" href="style.css?v=mobfix-1" />
     <style>
+      #admin-build-banner {
+        margin: 0 auto 1.25rem;
+        padding: 0.6rem 1rem;
+        max-width: 480px;
+        border-radius: 999px;
+        background: rgba(37, 99, 235, 0.12);
+        color: #1d4ed8;
+        font-weight: 600;
+        text-align: center;
+        letter-spacing: 0.02em;
+        box-shadow: inset 0 0 0 1px rgba(37, 99, 235, 0.2);
+      }
       .orders-banner {
         background: var(--color-surface, #f6f6f6);
         border: 1px solid var(--color-border);
@@ -131,6 +143,7 @@
     </style>
   </head>
   <body>
+    <div id="admin-build-banner">Build: dev • Multi-images: ON</div>
     <header>
       <div class="header-inner">
         <div class="logo"><a href="/index.html" class="brand"><img src="../assets/IMG_3086.png" alt="NERIN" class="site-logo" /></a></div>
