--- a/nerin_final_updated/frontend/contact.html
+++ b/nerin_final_updated/frontend/contact.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
     />
-      <link rel="stylesheet" href="style.css?v=mobfix-1" />
+      <link rel="stylesheet" href="/style.css?v=mobfix-1" />
     <link rel="stylesheet" href="/components/np-footer.css?v=np-r1">
   <script src="/components/np-footer.js?v=np-r1" defer></script>
 </head>
