--- a/nerin_final_updated/frontend/failure.html
+++ b/nerin_final_updated/frontend/failure.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pago rechazado</title>
-    <link rel="stylesheet" href="style.css?v=mobfix-1" />
+    <link rel="stylesheet" href="/style.css?v=mobfix-1" />
     <link rel="stylesheet" href="css/success.css" />
     <link rel="stylesheet" href="/components/np-footer.css?v=np-r1">
   <script src="/components/np-footer.js?v=np-r1" defer></script>
