Improve storefront SEO metadata and structured data

--- a/nerin_final_updated/frontend/index.html
+++ b/nerin_final_updated/frontend/index.html
@@ -7,13 +7,118 @@
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
     <title>NERIN Repuestos – Pantallas originales</title>
-        <link
+    <meta
+      name="description"
+      content="NERIN Repuestos distribuye pantallas Samsung originales Service Pack con envíos a todo Argentina y soporte para técnicos, revendedores y particulares."
+    />
+    <meta
+      name="keywords"
+      content="pantallas samsung originales, service pack argentina, repuestos samsung, pantallas celulares mayorista"
+    />
+    <meta name="robots" content="index,follow" />
+    <meta name="author" content="NERIN Repuestos" />
+    <meta name="theme-color" content="#101935" />
+    <link rel="canonical" href="/index.html" data-seo-absolute="href" />
+    <meta property="og:locale" content="es_AR" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Pantallas Samsung originales con garantía | NERIN Repuestos"
+    />
+    <meta
+      property="og:description"
+      content="Compra pantallas Samsung originales Service Pack con entrega inmediata, garantía técnica y asesoramiento real por WhatsApp."
+    />
+    <meta property="og:site_name" content="NERIN Repuestos" />
+    <meta
+      property="og:url"
+      content="/index.html"
+      data-seo-absolute="content"
+    />
+    <meta
+      property="og:image"
+      content="/assets/hero.png"
+      data-seo-absolute="content"
+    />
+    <meta
+      property="og:image:alt"
+      content="Pantallas Samsung originales con garantía en NERIN Repuestos"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Pantallas Samsung originales con garantía | NERIN Repuestos"
+    />
+    <meta
+      name="twitter:description"
+      content="Descubrí pantallas Samsung originales con envío a todo el país, atención personalizada y stock real."
+    />
+    <meta
+      name="twitter:url"
+      content="/index.html"
+      data-seo-absolute="content"
+    />
+    <meta
+      name="twitter:image"
+      content="/assets/hero.png"
+      data-seo-absolute="content"
+    />
+    <meta
+      name="twitter:image:alt"
+      content="Pantallas Samsung originales listas para enviar"
+    />
+    <link rel="icon" type="image/png" href="/assets/IMG_3086.png" />
+    <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
     />
-      <link rel="stylesheet" href="/style.css?v=mobfix-1" />
-    <link rel="stylesheet" href="/components/np-footer.css?v=np-r1">
-  <script src="/components/np-footer.js?v=np-r1" defer></script>
+    <link rel="stylesheet" href="/style.css?v=mobfix-1" />
+    <link rel="stylesheet" href="/components/np-footer.css?v=np-r1" />
+    <script src="/components/np-footer.js?v=np-r1" defer></script>
+    <script
+      type="application/ld+json"
+      id="org-schema"
+      data-seo-jsonld="organization"
+    >
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "NERIN Repuestos",
+  "url": "__BASE_URL__/",
+  "logo": "__BASE_URL__/assets/IMG_3086.png",
+  "sameAs": [
+    "https://www.instagram.com/nerin",
+    "https://www.facebook.com/nerin",
+    "https://wa.me/541112345678"
+  ],
+  "contactPoint": [
+    {
+      "@type": "ContactPoint",
+      "telephone": "+54 11 1234-5678",
+      "contactType": "customer service",
+      "areaServed": "AR",
+      "availableLanguage": ["es-AR"]
+    }
+  ]
+}
+    </script>
+    <script
+      type="application/ld+json"
+      id="website-schema"
+      data-seo-jsonld="website"
+    >
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "NERIN Repuestos",
+  "url": "__BASE_URL__/",
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": "__BASE_URL__/shop.html?search={search_term_string}",
+    "query-input": "required name=search_term_string"
+  }
+}
+    </script>
 </head>
   <body>
     <header>
