--- a/nerin_final_updated/frontend/product.html
+++ b/nerin_final_updated/frontend/product.html
@@ -7,13 +7,91 @@
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
     <title>Detalle de producto – NERIN</title>
-        <link
+    <meta
+      name="description"
+      content="Descubrí el catálogo de pantallas y repuestos originales de NERIN."
+      data-product-meta="description"
+    />
+    <meta
+      name="keywords"
+      content="pantallas originales, repuestos samsung, service pack"
+      data-product-meta="keywords"
+    />
+    <meta name="robots" content="index,follow" />
+    <meta property="og:locale" content="es_AR" />
+    <meta property="og:site_name" content="NERIN Repuestos" />
+    <meta property="og:type" content="product" />
+    <meta
+      property="og:title"
+      content="Pantallas originales con garantía | NERIN"
+      data-product-meta="og:title"
+    />
+    <meta
+      property="og:description"
+      content="Repuestos originales para técnicos y particulares en Argentina."
+      data-product-meta="og:description"
+    />
+    <meta
+      property="og:url"
+      content="/product.html"
+      data-seo-absolute="content"
+      data-product-meta="og:url"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Pantallas originales con garantía | NERIN"
+      data-product-meta="twitter:title"
+    />
+    <meta
+      name="twitter:description"
+      content="Pantallas Samsung originales Service Pack con envío rápido."
+      data-product-meta="twitter:description"
+    />
+    <meta
+      name="twitter:url"
+      content="/product.html"
+      data-seo-absolute="content"
+      data-product-meta="twitter:url"
+    />
+    <link
+      rel="canonical"
+      href="/product.html"
+      data-seo-absolute="href"
+      data-product-meta="canonical"
+    />
+    <link rel="icon" type="image/png" href="/assets/IMG_3086.png" />
+    <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
     />
-      <link rel="stylesheet" href="/style.css?v=mobfix-1" />
-    <link rel="stylesheet" href="/components/np-footer.css?v=np-r1">
-  <script src="/components/np-footer.js?v=np-r1" defer></script>
+    <link rel="stylesheet" href="/style.css?v=mobfix-1" />
+    <link rel="stylesheet" href="/components/np-footer.css?v=np-r1" />
+    <script src="/components/np-footer.js?v=np-r1" defer></script>
+    <script
+      type="application/ld+json"
+      id="product-breadcrumbs"
+      data-product-breadcrumbs="true"
+    >
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Inicio",
+      "item": "__BASE_URL__/"
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "name": "Productos",
+      "item": "__BASE_URL__/shop.html"
+    }
+  ]
+}
+    </script>
 </head>
   <body>
     <header>
