--- a/nerin_final_updated/frontend/shop.html
+++ b/nerin_final_updated/frontend/shop.html
@@ -7,13 +7,79 @@
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
     <title>NERIN – Tienda</title>
-        <link
+    <meta
+      name="description"
+      content="Explorá el catálogo completo de pantallas Samsung originales Service Pack y repuestos premium de NERIN con filtros por modelo, marca y categoría."
+    />
+    <meta
+      name="keywords"
+      content="catalogo pantallas samsung, tienda repuestos celulares, service pack argentina"
+    />
+    <meta name="robots" content="index,follow" />
+    <link rel="canonical" href="/shop.html" data-seo-absolute="href" />
+    <meta property="og:locale" content="es_AR" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="NERIN Repuestos" />
+    <meta property="og:title" content="Catálogo de pantallas originales | NERIN" />
+    <meta
+      property="og:description"
+      content="Filtrá por modelo y encontrá pantallas Samsung originales listas para enviar con garantía técnica."
+    />
+    <meta
+      property="og:url"
+      content="/shop.html"
+      data-seo-absolute="content"
+    />
+    <meta
+      property="og:image"
+      content="/assets/hero.png"
+      data-seo-absolute="content"
+    />
+    <meta
+      property="og:image:alt"
+      content="Catálogo de pantallas originales NERIN"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Catálogo de pantallas originales | NERIN" />
+    <meta
+      name="twitter:description"
+      content="Accedé al stock actualizado de pantallas Samsung originales Service Pack y solicitá asesoramiento inmediato."
+    />
+    <meta
+      name="twitter:url"
+      content="/shop.html"
+      data-seo-absolute="content"
+    />
+    <meta
+      name="twitter:image"
+      content="/assets/hero.png"
+      data-seo-absolute="content"
+    />
+    <meta
+      name="twitter:image:alt"
+      content="Catálogo completo de repuestos Samsung"
+    />
+    <link rel="icon" type="image/png" href="/assets/IMG_3086.png" />
+    <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
     />
-      <link rel="stylesheet" href="/style.css?v=mobfix-1" />
-    <link rel="stylesheet" href="/components/np-footer.css?v=np-r1">
-  <script src="/components/np-footer.js?v=np-r1" defer></script>
+    <link rel="stylesheet" href="/style.css?v=mobfix-1" />
+    <link rel="stylesheet" href="/components/np-footer.css?v=np-r1" />
+    <script src="/components/np-footer.js?v=np-r1" defer></script>
+    <script
+      type="application/ld+json"
+      id="shop-schema"
+      data-seo-jsonld="collection"
+    >
+{
+  "@context": "https://schema.org",
+  "@type": "CollectionPage",
+  "name": "Catálogo de pantallas originales NERIN",
+  "description": "Catálogo actualizado de pantallas Samsung originales con filtros por marca, modelo y categoría.",
+  "url": "__BASE_URL__/shop.html"
+}
+    </script>
 </head>
   <body>
     <header>
