--- a/nerin_final_updated/frontend/contact.html
+++ b/nerin_final_updated/frontend/contact.html
@@ -7,13 +7,75 @@
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
     <title>Contacto – NERIN</title>
-        <link
+    <meta
+      name="description"
+      content="Contactá a NERIN para solicitar cotizaciones de pantallas Samsung originales, soporte técnico inmediato y envíos a todo el país."
+    />
+    <meta name="robots" content="index,follow" />
+    <link rel="canonical" href="/contact.html" data-seo-absolute="href" />
+    <meta property="og:locale" content="es_AR" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="NERIN Repuestos" />
+    <meta property="og:title" content="Contacto directo | NERIN Repuestos" />
+    <meta
+      property="og:description"
+      content="Escribinos por WhatsApp o completá el formulario para recibir asesoramiento personalizado en pantallas originales."
+    />
+    <meta
+      property="og:url"
+      content="/contact.html"
+      data-seo-absolute="content"
+    />
+    <meta
+      property="og:image"
+      content="/assets/hero.png"
+      data-seo-absolute="content"
+    />
+    <meta
+      property="og:image:alt"
+      content="Equipo de soporte de NERIN listo para ayudar"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Contacto directo | NERIN Repuestos" />
+    <meta
+      name="twitter:description"
+      content="Solicitá cotizaciones y envíos de pantallas Samsung originales en minutos."
+    />
+    <meta
+      name="twitter:url"
+      content="/contact.html"
+      data-seo-absolute="content"
+    />
+    <meta
+      name="twitter:image"
+      content="/assets/hero.png"
+      data-seo-absolute="content"
+    />
+    <meta
+      name="twitter:image:alt"
+      content="Atención personalizada de NERIN"
+    />
+    <link rel="icon" type="image/png" href="/assets/IMG_3086.png" />
+    <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
     />
-      <link rel="stylesheet" href="/style.css?v=mobfix-1" />
-    <link rel="stylesheet" href="/components/np-footer.css?v=np-r1">
-  <script src="/components/np-footer.js?v=np-r1" defer></script>
+    <link rel="stylesheet" href="/style.css?v=mobfix-1" />
+    <link rel="stylesheet" href="/components/np-footer.css?v=np-r1" />
+    <script src="/components/np-footer.js?v=np-r1" defer></script>
+    <script
+      type="application/ld+json"
+      id="contact-schema"
+      data-seo-jsonld="contact"
+    >
+{
+  "@context": "https://schema.org",
+  "@type": "ContactPage",
+  "name": "Contacto NERIN",
+  "description": "Formulario y canales de contacto directo con NERIN Repuestos.",
+  "url": "__BASE_URL__/contact.html"
+}
+    </script>
 </head>
   <body>
     <header>
