Add admin product description support and display

--- a/nerin_final_updated/frontend/admin.html
+++ b/nerin_final_updated/frontend/admin.html
@@ -331,6 +331,12 @@
               name="slug"
               placeholder="Slug"
             />
+            <textarea
+              id="productDescription"
+              name="description"
+              placeholder="Descripción del producto"
+              rows="3"
+            ></textarea>
             <input
               type="text"
               id="productMetaTitle"
